# level-2

./: .gitignore  AddLenguage.cpp  CMakeLists.txt  Lequel.cpp  Lequel.h  README.md  Text.cpp  main.cpp
resources/: languagecode_names_es.csv
resources/AddedCorpuses/: AsturianoCorpus  CatalánCorpus  GuaraniCorpus  KlingonCorpus
resources/trigrams/: ast.csv  cat.csv  gua.csv  klg.csv
